<resources>
    <string name="app_name">e2softDemo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Log Out</string>

    <string name="app_login_username">Username</string>
    <string name="app_login_password">Password</string>
    <string name="app_singup">SingUp</string>
    <string name="app_login">LogIn</string>
    <string name="reg_name">Your Name</string>
    <string name="reg_dob">Date of Birth</string>
    <string name="reg_email">E-mail</string>
</resources>
